--- a/softmax.ipynb
+++ b/softmax.ipynb
@@ -219,6 +219,65 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([2, 1])\n",
+      "tensor([[0.6590, 0.2424, 0.0986],\n",
+      "        [0.6652, 0.2447, 0.0900]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = torch.tensor([[2.0, 1.0, 0.1], [3.0, 2.0, 1.0]])\n",
+    "max_logits = torch.max(x, dim=-1, keepdim=True).values\n",
+    "print(max_logits.shape)\n",
+    "exp_logits = torch.exp(x - max_logits)\n",
+    "p = exp_logits / torch.sum(exp_logits, dim=-1, keepdim=True)\n",
+    "print(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0, 1, 0],\n",
+       "        [1, 0, 0],\n",
+       "        [0, 0, 1]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = torch.tensor([[0.2,0.3,0.5],[0.3,0.2,0.5],[0.4,0.4,0.2]], requires_grad=True)\n",
+    "y = torch.tensor([1,0,2])  # B,\n",
+    "one_hot_labels = F.one_hot(y)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
